[gd_scene load_steps=5 format=3 uid="uid://goblin_archer_scene"]

[ext_resource type="Script" path="res://Scripts/Enemies/GoblinArcher.gd" id="1_goblin"]

[sub_resource type="CircleShape2D" id="CircleShape2D_physics"]
radius = 24.0

[sub_resource type="CircleShape2D" id="CircleShape2D_hurtbox"]
radius = 28.0

[sub_resource type="CircleShape2D" id="CircleShape2D_detection"]
radius = 600.0

[node name="GoblinArcher" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 9
script = ExtResource("1_goblin")
enemy_type = "goblin_archer"
enemy_display_name = "Goblin Archer"
max_health = 20.0
move_speed = 180.0
damage = 8.0
health_bar_width = 80.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_physics")

[node name="VisualsPivot" type="Node2D" parent="."]

[node name="Sprite" type="ColorRect" parent="VisualsPivot"]
offset_left = -28.0
offset_top = -28.0
offset_right = 28.0
offset_bottom = 28.0
pivot_offset = Vector2(28, 28)
color = Color(0.176471, 0.313726, 0.0862745, 1)

[node name="Bow" type="ColorRect" parent="VisualsPivot"]
offset_left = 28.0
offset_top = -4.0
offset_right = 60.0
offset_bottom = 4.0
color = Color(0.545098, 0.270588, 0.0745098, 1)

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 96
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("CircleShape2D_hurtbox")

[node name="DetectionRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRange"]
shape = SubResource("CircleShape2D_detection")

[node name="HealthBar" type="Node2D" parent="."]

[node name="Background" type="ColorRect" parent="HealthBar"]
offset_left = -40.0
offset_top = -80.0
offset_right = 40.0
offset_bottom = -68.0
color = Color(0.2, 0, 0, 1)

[node name="Fill" type="ColorRect" parent="HealthBar"]
offset_left = -40.0
offset_top = -80.0
offset_right = 40.0
offset_bottom = -68.0
color = Color(1, 0, 0, 1)

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="AnimationTimer" type="Timer" parent="."]
wait_time = 0.3
autostart = true
